// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/checkbox/demo/basic.md correctly 1`] = `
<label
  class="wmstool-checkbox-wrapper"
>
  <span
    class="wmstool-checkbox"
  >
    <input
      class="wmstool-checkbox-input"
      type="checkbox"
    />
    <span
      class="wmstool-checkbox-inner"
    />
  </span>
  <span>
    Checkbox
  </span>
</label>
`;

exports[`renders ./components/checkbox/demo/check-all.md correctly 1`] = `
<div>
  <div
    style="border-bottom:1px solid #E9E9E9"
  >
    <label
      class="wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox wmstool-checkbox-indeterminate"
      >
        <input
          class="wmstool-checkbox-input"
          type="checkbox"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Check all
      </span>
    </label>
  </div>
  <br />
  <div
    class="wmstool-checkbox-group"
  >
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox wmstool-checkbox-checked"
      >
        <input
          checked=""
          class="wmstool-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox"
      >
        <input
          class="wmstool-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox wmstool-checkbox-checked"
      >
        <input
          checked=""
          class="wmstool-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/checkbox/demo/controller.md correctly 1`] = `
<div>
  <p
    style="margin-bottom:20px"
  >
    <label
      class="wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox wmstool-checkbox-checked"
      >
        <input
          checked=""
          class="wmstool-checkbox-input"
          type="checkbox"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Checked-Enabled
      </span>
    </label>
  </p>
  <p>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm"
      type="button"
    >
      <span>
        Uncheck
      </span>
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm"
      style="margin-left:10px"
      type="button"
    >
      <span>
        Disable
      </span>
    </button>
  </p>
</div>
`;

exports[`renders ./components/checkbox/demo/disabled.md correctly 1`] = `
<div>
  <label
    class="wmstool-checkbox-wrapper"
  >
    <span
      class="wmstool-checkbox wmstool-checkbox-disabled"
    >
      <input
        class="wmstool-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="wmstool-checkbox-inner"
      />
    </span>
  </label>
  <br />
  <label
    class="wmstool-checkbox-wrapper"
  >
    <span
      class="wmstool-checkbox wmstool-checkbox-checked wmstool-checkbox-disabled"
    >
      <input
        checked=""
        class="wmstool-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="wmstool-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`renders ./components/checkbox/demo/group.md correctly 1`] = `
<div>
  <div
    class="wmstool-checkbox-group"
  >
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox wmstool-checkbox-checked"
      >
        <input
          checked=""
          class="wmstool-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox"
      >
        <input
          class="wmstool-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox"
      >
        <input
          class="wmstool-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="wmstool-checkbox-group"
  >
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox"
      >
        <input
          class="wmstool-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox wmstool-checkbox-checked"
      >
        <input
          checked=""
          class="wmstool-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox"
      >
        <input
          class="wmstool-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="wmstool-checkbox-group"
  >
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox wmstool-checkbox-checked wmstool-checkbox-disabled"
      >
        <input
          checked=""
          class="wmstool-checkbox-input"
          disabled=""
          type="checkbox"
          value="Apple"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox wmstool-checkbox-disabled"
      >
        <input
          class="wmstool-checkbox-input"
          disabled=""
          type="checkbox"
          value="Pear"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="wmstool-checkbox-group-item wmstool-checkbox-wrapper"
    >
      <span
        class="wmstool-checkbox wmstool-checkbox-disabled"
      >
        <input
          class="wmstool-checkbox-input"
          disabled=""
          type="checkbox"
          value="Orange"
        />
        <span
          class="wmstool-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/checkbox/demo/layout.md correctly 1`] = `
<div
  class="wmstool-checkbox-group"
  style="width:100%"
>
  <div
    class="wmstool-row"
  >
    <div
      class="wmstool-col-8"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
            value="A"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
        <span>
          A
        </span>
      </label>
    </div>
    <div
      class="wmstool-col-8"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
            value="B"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
        <span>
          B
        </span>
      </label>
    </div>
    <div
      class="wmstool-col-8"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
            value="C"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
        <span>
          C
        </span>
      </label>
    </div>
    <div
      class="wmstool-col-8"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
            value="D"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
        <span>
          D
        </span>
      </label>
    </div>
    <div
      class="wmstool-col-8"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
            value="E"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
        <span>
          E
        </span>
      </label>
    </div>
  </div>
</div>
`;
